# Smart-Resume-Reviewer

./: README.md
resume_reviewer/: README.md  analysis_report_Amaarkhan.pdf.txt  email.md  pyproject.toml  structure.txt  test_backend.py
resume_reviewer/documents/: job.txt
resume_reviewer/reports/: resume_analysis_report_291df23f-a5f7-4ac6-b5f4-fb876f4d8ca9.txt
resume_reviewer/src/resume_reviewer/: app.py  crew.py  main.py  report_formatter.py
resume_reviewer/src/resume_reviewer/config/: agents.yaml  tasks.yaml
resume_reviewer/src/resume_reviewer/rag/: __init__.py  embedder.py  matcher.py  vector_db.py
resume_reviewer/src/resume_reviewer/templates/: analyze.html  base.html  index.html  results.html  upload.html
resume_reviewer/src/resume_reviewer/tools/: custom_tool.py
